SQS: Add Configure to Lambda action (#2016)
* Start configure Lambda trigger

* Setup for follow up

* Added test for ConfigureLambdaDialog

* Fix style

* Iam dialog fix

* Added error handling for configuration after iam

* PR revisions

* PR revisions pt 2

* Waiter fix

--- a/jetbrains-core/resources/META-INF/plugin.xml
+++ b/jetbrains-core/resources/META-INF/plugin.xml
@@ -349,6 +349,8 @@
             <action id="sqs.send.message"
                     class="software.aws.toolkits.jetbrains.services.sqs.actions.SendMessageAction"/>
             <separator/>
+            <action id="sqs.configure.lambda"
+                    class="software.aws.toolkits.jetbrains.services.sqs.actions.ConfigureLambdaAction"/>
             <action id="sqs.subscribe.sns"
                     class="software.aws.toolkits.jetbrains.services.sqs.actions.SubscribeSnsAction"/>
             <separator/>
