--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -363,6 +363,7 @@ feedback.validation.comment_too_long=Comment is too long.
 feedback.validation.empty_comment=Please provide a comment.
 feedback.validation.no_sentiment=Please select how you're feeling.
 general.close_button=Close
+general.configure_button=Configure
 general.create_button=Create
 general.file_not_found=File not found: "{0}"
 general.message=Message
@@ -706,6 +707,20 @@ settings.states.invalid.short=Unable to connect
 settings.states.validating=Validating connection to AWS...
 settings.states.validating.short=Validating connection
 settings.title=AWS Connection Settings
+sqs.configure.lambda=Configure Lambda Trigger
+sqs.configure.lambda.configure.tooltip=It may take a few seconds to configure.
+sqs.configure.lambda.error=Failed to add trigger for function {0}. Please try again.
+sqs.configure.lambda.function=Lambda Function:
+sqs.configure.lambda.in_progress=Configuring...
+sqs.configure.lambda.select=Select Lambda Function:
+sqs.configure.lambda.success=Trigger successfully added to function {0}
+sqs.configure.lambda.tooltip=<html><p>Configure the queue to trigger an AWS Lambda function when new messages arrive in the queue.</p><p>The queue and Lambda function must be in the same AWS Region.</p></html>
+sqs.configure.lambda.validation.function=Lambda function must be specified.
+sqs.confirm.iam=Create IAM Role 
+sqs.confirm.iam.create=Create
+sqs.confirm.iam.failed=Failed to create and attach role policy.
+sqs.confirm.iam.in_progress=Creating...
+sqs.confirm.iam.warning.text=<html>The selected Lambda function does not have permission to access SQS.<p>The following IAM role policy will be added to the function's execution role:</p></html>
 sqs.create.fifo.label=FIFO
 sqs.create.queue.create=Create
 sqs.create.queue.failed=Failed to create queue {0}
@@ -751,7 +766,7 @@ sqs.send.message.success=Sent message ID: {0}
 sqs.service_name=Amazon SQS
 sqs.standard.queue.tooltip=Supports at-least-once delivery and message ordering is not preserved.
 sqs.subscribe.sns=Subscribe to SNS topic
-sqs.subscribe.sns.failed=Failed to subscribe {0} to {0}
+sqs.subscribe.sns.failed=Failed to subscribe {0} to {1}
 sqs.subscribe.sns.in_progress=Subscribing...
 sqs.subscribe.sns.select=Select SNS topic
 sqs.subscribe.sns.select.tooltip=Messages from the selected topic are sent to the queue.
