--- a/buildspec/linuxUiTests.yml
+++ b/buildspec/linuxUiTests.yml
@@ -33,6 +33,10 @@ phases:
         aws_secret_access_key=$SECRET
         aws_session_token=$TOKEN"
       - pip3 install --user --upgrade  aws-sam-cli
+      # login to DockerHub so we don't get throttled
+      - export DOCKER_USERNAME=`echo $DOCKER_HUB_TOKEN | jq -r '.username'`
+      - export DOCKER_PASSWORD=`echo $DOCKER_HUB_TOKEN | jq -r '.password'`
+      - docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD || true
 
   build:
     commands:
