test: specify a workspace for tests
Now we can test actual VSCode behavior related to workspaces and
launch.json, instead of creating elaborate mocks.

Note: VSCode does not allow adding a workspace from a test.
    // Not allowed in tests.
    await workspaceutil.addFolderToWorkspace(fakeWorkspace, true)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -41,7 +41,8 @@
             "runtimeExecutable": "${execPath}",
             "args": [
                 "--extensionDevelopmentPath=${workspaceFolder}",
-                "--extensionTestsPath=${workspaceFolder}/dist/src/test/index"
+                "--extensionTestsPath=${workspaceFolder}/dist/src/test/index",
+                "${workspaceRoot}/dist/src/testFixtures/workspaceFolder"
             ],
             "env": {
                 "TEST_REPORT_DIR": "${workspaceFolder}/.test-reports",
@@ -59,7 +60,8 @@
             "runtimeExecutable": "${execPath}",
             "args": [
                 "--extensionDevelopmentPath=${workspaceFolder}",
-                "--extensionTestsPath=${workspaceFolder}/dist/src/test/index.js"
+                "--extensionTestsPath=${workspaceFolder}/dist/src/test/index.js",
+                "${workspaceRoot}/dist/src/testFixtures/workspaceFolder"
             ],
             "env": {
                 "TEST_REPORT_DIR": "${workspaceFolder}/.test-reports",
