remove mocks, find actual bugs
awsSamDebugConfiguration.ts:ensureRelativePaths() assumed that
`config.invokeTarget.target` existed. If user has an invalid aws-sam
config in their launch.json then Toolkit would fail here.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -69,7 +69,7 @@
                 "AWS_TOOLKIT_IGNORE_WEBPACK_BUNDLE": "true",
                 "NO_COVERAGE": "true"
             },
-            "outFiles": ["${workspaceFolder}/dist/src/test/**/*.js"],
+            "outFiles": ["${workspaceFolder}/dist/.vscode/*", "${workspaceFolder}/dist/src/test/**/*.js"],
             "preLaunchTask": "${defaultBuildTask}"
         },
         {
