--- a/src/testFixtures/workspaceFolder/.vscode/launch.json
+++ b/src/testFixtures/workspaceFolder/.vscode/launch.json
@@ -2,9 +2,24 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "test-launchconfig-1-nonaws",
+            "request": "direct-invoke",
+            "type": "not-aws-sam",
+            "invokeTarget": {
+                "logicalId": "resource",
+                "target": "template",
+                "templatePath": "/path/to/nothing/template.yaml"
+            }
+        },
+        {
+            "name": "test-launchconfig-2-invalidrequest",
+            "request": "invalid-request",
+            "type": "aws-sam"
+        },
+        {
+            "name": "test-launchconfig-3-js",
             "type": "aws-sam",
             "request": "direct-invoke",
-            "name": "js-plain-sam-app:SourceCodeBesidePackageJson (nodejs10.x)",
             "invokeTarget": {
                 "target": "template",
                 "templatePath": "js-plain-sam-app/template.yaml",
@@ -16,9 +31,9 @@
             }
         },
         {
+            "name": "test-launchconfig-4-jsdeep",
             "type": "aws-sam",
             "request": "direct-invoke",
-            "name": "js-plain-sam-app:SourceCodeBesidePackageJson (nodejs10.x)",
             "invokeTarget": {
                 "target": "template",
                 "templatePath": "deeper-projects/js-plain-sam-app/template.yaml",
@@ -30,9 +45,9 @@
             }
         },
         {
+            "name": "test-launchconfig-5-python3.7",
             "type": "aws-sam",
             "request": "direct-invoke",
-            "name": "python3.7-plain-sam-app:HelloWorldFunction (python3.7)",
             "invokeTarget": {
                 "target": "template",
                 "templatePath": "python3.7-plain-sam-app/template.yaml",
@@ -44,9 +59,9 @@
             }
         },
         {
+            "name": "test-launchconfig-6-python3.7",
             "type": "aws-sam",
             "request": "direct-invoke",
-            "name": "API python3.7-plain-sam-app:HelloWorldFunction (python3.7)",
             "invokeTarget": {
                 "target": "api",
                 "templatePath": "python3.7-plain-sam-app/template.yaml",
@@ -61,9 +76,9 @@
             }
         },
         {
+            "name": "test-launchconfig-7-nodejs10",
             "type": "aws-sam",
             "request": "direct-invoke",
-            "name": "js-manifest-in-root:SourceCodeTwoFoldersDeep (nodejs10.x)",
             "invokeTarget": {
                 "target": "template",
                 "templatePath": "js-manifest-in-root/template.yaml",
@@ -75,23 +90,9 @@
             }
         },
         {
+            "name": "test-launchconfig-8-api",
             "type": "aws-sam",
             "request": "direct-invoke",
-            "name": "csharp2.1-plain-sam-app:HelloWorldFunction (dotnetcore2.1)",
-            "invokeTarget": {
-                "target": "template",
-                "templatePath": "csharp2.1-plain-sam-app/template.yaml",
-                "logicalId": "HelloWorldFunction"
-            },
-            "lambda": {
-                "payload": {},
-                "environmentVariables": {}
-            }
-        },
-        {
-            "type": "aws-sam",
-            "request": "direct-invoke",
-            "name": "API csharp2.1-plain-sam-app:HelloWorldFunction (dotnetcore2.1)",
             "invokeTarget": {
                 "target": "api",
                 "templatePath": "csharp2.1-plain-sam-app/template.yaml",
@@ -106,9 +107,9 @@
             }
         },
         {
+            "name": "test-launchconfig-9-nodejs",
             "type": "aws-sam",
             "request": "direct-invoke",
-            "name": "js-manifest-in-subfolder:SourceCodeInSubfolderToManifest (nodejs10.x)",
             "invokeTarget": {
                 "target": "template",
                 "templatePath": "js-manifest-in-subfolder/template.yaml",
