SQS code style and minor UI cleanup (#2042)
- A lot of minor code style/formatting cleanups
  - Move SNSResources to the sns package
  - Cleanup form files
  - Simplify some string parsing
- Remove saving last sent message. While playing with it, it doesn't seem to have a good UX.
- Show open windows on opening them again instead of closing them
- Fixup Send message panel to use less vertical space/not hide the send button when there are errors/show floating error labels instead of JLabels that we make appear

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -775,4 +775,4 @@ sqs.subscribe.sns.success=Subscribed successfully to topic {0}.
 sqs.subscribe.sns.topic=SNS topic:
 sqs.subscribe.sns.validation.empty_topic=Topic must be specified.
 sqs.toolwindow=SQS
-sqs.url.parse_error=Error parsing queue URL
+sqs.url.parse_error=Error parsing SQS queue URL
