Add purge queue action (#2038)

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -752,6 +752,10 @@ sqs.message.validation.long.id=ID exceeds the maximum length of 128 characters.
 sqs.messages.available.text=Messages Available:
 sqs.poll.message=Poll for Messages
 sqs.poll.warning.text=<html><b>To view messages in the queue, poll for messages.</b><p>Once polled, the sample of messages remain in the queue and are not returned to subsequent receive requests for the duration of the visibility timeout.</p></html>
+sqs.purge_queue=Purge Queue
+sqs.purge_queue.failed=Failed to purge queue {0}
+sqs.purge_queue.failed.60_seconds=Purge queue request already in progress for queue {0}
+sqs.purge_queue.succeeded=Started purging queue {0}
 sqs.queue.name.tooltip=<html><p>A queue name is case-sensitive and can have up to 80 characters of alphanumeric characters, hyphens (-), and underscores ( _ ). </p><p>If FIFO is selected, '.fifo' will be appended to the specified name.</p></html>
 sqs.queue.polled.messages=Polled Messages
 sqs.required.empty.text=(Required)
