--- a/jetbrains-core/resources/META-INF/plugin.xml
+++ b/jetbrains-core/resources/META-INF/plugin.xml
@@ -344,18 +344,14 @@
         </group>
 
         <group id="aws.toolkit.explorer.sqs.queue" popup="true" compact="false">
-            <action id="sqs.poll.message"
-                    class="software.aws.toolkits.jetbrains.services.sqs.actions.PollMessageAction"/>
-            <action id="sqs.send.message"
-                    class="software.aws.toolkits.jetbrains.services.sqs.actions.SendMessageAction"/>
+            <action id="sqs.poll.message" class="software.aws.toolkits.jetbrains.services.sqs.actions.PollMessageAction"/>
+            <action id="sqs.send.message" class="software.aws.toolkits.jetbrains.services.sqs.actions.SendMessageAction"/>
+            <action id="sqs.purge" class="software.aws.toolkits.jetbrains.services.sqs.actions.PurgeQueueAction"/>
             <separator/>
-            <action id="sqs.configure.lambda"
-                    class="software.aws.toolkits.jetbrains.services.sqs.actions.ConfigureLambdaAction"/>
-            <action id="sqs.subscribe.sns"
-                    class="software.aws.toolkits.jetbrains.services.sqs.actions.SubscribeSnsAction"/>
+            <action id="sqs.configure.lambda" class="software.aws.toolkits.jetbrains.services.sqs.actions.ConfigureLambdaAction"/>
+            <action id="sqs.subscribe.sns" class="software.aws.toolkits.jetbrains.services.sqs.actions.SubscribeSnsAction"/>
             <separator/>
-            <action id="sqs.delete.queue"
-                    class="software.aws.toolkits.jetbrains.services.sqs.actions.DeleteQueueAction"/>
+            <action id="sqs.delete.queue" class="software.aws.toolkits.jetbrains.services.sqs.actions.DeleteQueueAction"/>
         </group>
 
         <action class="software.aws.toolkits.jetbrains.core.credentials.SettingsSelectorAction" id="aws.settings.selector" icon="AwsIcons.Logos.AWS"/>
