--- a/package.json
+++ b/package.json
@@ -450,6 +450,10 @@
                     "when": "false"
                 },
                 {
+                    "command": "aws.uploadLambda",
+                    "when": "false"
+                },
+                {
                     "command": "aws.invokeLambda",
                     "when": "false"
                 },
@@ -657,6 +661,11 @@
                     "command": "aws.importLambda",
                     "when": "view == aws.explorer && viewItem =~ /^(awsRegionFunctionNode|awsRegionFunctionNodeImportable)$/",
                     "group": "0@2"
+                },
+                {
+                    "command": "aws.uploadLambda",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsRegionFunctionNode|awsRegionFunctionNodeImportable)$/",
+                    "group": "1@1"
                 },
                 {
                     "command": "aws.deleteLambda",
@@ -873,6 +882,12 @@
                 "title": "%AWS.command.importLambda%",
                 "category": "AWS",
                 "enablement": "viewItem == awsRegionFunctionNodeImportable"
+            },
+            {
+                "command": "aws.uploadLambda",
+                "title": "%AWS.command.uploadLambda%",
+                "category": "AWS",
+                "enablement": "viewItem =~ /^(awsRegionFunctionNode|awsRegionFunctionNodeImportable)$/"
             },
             {
                 "command": "aws.deleteLambda",
