--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -719,8 +719,8 @@ sqs.configure.lambda.select=Select Lambda Function:
 sqs.configure.lambda.success=Trigger successfully added to function {0}
 sqs.configure.lambda.tooltip=<html><p>Configure the queue to trigger an AWS Lambda function when new messages arrive in the queue.</p><p>The queue and Lambda function must be in the same AWS Region.</p></html>
 sqs.configure.lambda.validation.function=Lambda function must be specified.
-sqs.confirm.iam=Create IAM Role 
-sqs.confirm.iam.create=Create
+sqs.confirm.iam=Create IAM Role
+sqs.confirm.iam.create=Add Policy
 sqs.confirm.iam.failed=Failed to create and attach role policy.
 sqs.confirm.iam.in_progress=Creating...
 sqs.confirm.iam.warning.text=<html>The selected Lambda function does not have permission to access SQS.<p>The following IAM role policy will be added to the function's execution role:</p></html>
@@ -752,9 +752,10 @@ sqs.message.validation.empty.deduplication_id=Please enter deduplication ID.
 sqs.message.validation.empty.group_id=Please enter group ID.
 sqs.message.validation.empty.message.body=Please enter message body.
 sqs.message.validation.long.id=ID exceeds the maximum length of 128 characters.
-sqs.messages.available.text=Messages Available:
+sqs.message_table_initial_text=Press "Poll for Messages" to load messages
+sqs.messages.available.text={0, choice, 0#No messages|1#1 message|2#{0,number} messages} available
 sqs.poll.message=Poll for Messages
-sqs.poll.warning.text=<html><b>To view messages in the queue, poll for messages.</b><p>Once polled, the sample of messages remain in the queue and are not returned to subsequent receive requests for the duration of the visibility timeout.</p></html>
+sqs.poll.warning.text=<html><p>Once polled, the sample of messages remain in the queue and are not returned to subsequent receive requests for the duration of the visibility timeout.</p></html>
 sqs.purge_queue=Purge Queue
 sqs.purge_queue.failed=Failed to purge queue {0}
 sqs.purge_queue.failed.60_seconds=Purge queue request already in progress for queue {0}
@@ -763,7 +764,6 @@ sqs.queue.name.tooltip=<html><p>A queue name is case-sensitive and can have up t
 sqs.queue.polled.messages=Polled Messages
 sqs.required.empty.text=(Required)
 sqs.send.message=Send a Message
-sqs.send.message.body=Message Body:
 sqs.send.message.body.empty.text=Enter message body
 sqs.send.message.clear.button=Clear
 sqs.send.message.deduplication_id=Message Deduplication ID:
