--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "onLanguage:ssm-yaml",
         "onCommand:aws.ssmDocument.createLocalDocument",
         "onCommand:aws.ssmDocument.openLocalDocument",
+        "onCommand:aws.ssmDocument.publishDocument",
         "onLanguage:javascript",
         "onLanguage:python",
         "onLanguage:csharp",
@@ -1027,6 +1028,11 @@
             {
                 "command": "aws.ssmDocument.openLocalDocument",
                 "title": "%AWS.command.ssmDocument.openLocalDocument%",
+                "category": "AWS"
+            },
+            {
+                "command": "aws.ssmDocument.publishDocument",
+                "title": "%AWS.command.ssmDocument.publishDocument%",
                 "category": "AWS"
             },
             {
