TemplateSymbolProvider.getSymbols: wait for symbols
Test actual code (instead of mocks), find actual bugs:
- VSCode symbols provider is lazy, wait for it.
- Fix `wantType` assignment in TemplateSymbolResolver.isKind()

--- a/src/testFixtures/workspaceFolder/python3.7-plain-sam-app/template.yaml
+++ b/src/testFixtures/workspaceFolder/python3.7-plain-sam-app/template.yaml
@@ -23,6 +23,24 @@ Resources:
                     Properties:
                         Path: /hello
                         Method: get
+    Function2NotInLaunchJson: # Not in workspace's launch.json.
+        Type: AWS::Serverless::Function
+        Properties:
+            CodeUri: hello_world/
+            Handler: app.lambda_handler_2
+            Runtime: python3.7
+    Function3NotInLaunchJson: # Not in workspace's launch.json.
+        Type: AWS::Serverless::Function
+        Properties:
+            CodeUri: hello_world/
+            Handler: app.lambda_handler_3
+            Runtime: python3.7
+            Events:
+                HelloWorld:
+                    Type: Api
+                    Properties:
+                        Path: /apipath1
+                        Method: get
     ServerlessApi:
         Type: AWS::Serverless::Api
         Properties:
