Add delete message to SQS table (#2036)
- Add delete message action and shortcut

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -736,6 +736,10 @@ sqs.create.standard.label=Standard
 sqs.create.validation.empty.queue.name=Queue name must be specified.
 sqs.create.validation.long.queue.name=Queue name must not exceed {0} characters in length.
 sqs.create.validation.queue.name.invalid=Queue names can only contain alphanumeric characters, hyphens (-), and underscores (_).
+sqs.delete.message.action=Delete {0, choice, 1#message|2#{0,number} messages}
+sqs.delete.message.failed=Failed to delete {0, choice, 1#message|2#{0,number} messages}.
+sqs.delete.message.partial_successs=Failed to delete some messages! {0, choice, 1#message|2#{0,number} messages} were deleted.
+sqs.delete.message.succeeded=Successfully deleted {0, choice, 1#1 message|2#{0,number} messages}.
 sqs.delete.queue.action=Delete Queue
 sqs.failed_to_load_total=Failed to load number of messages available
 sqs.failed_to_poll_messages=Failed to poll messages
@@ -748,9 +752,9 @@ sqs.message.message_id=Message ID
 sqs.message.no_messages=No messages polled
 sqs.message.sender_id=Sender ID
 sqs.message.timestamp=Sent Timestamp
-sqs.message.validation.empty.deduplication_id=Please enter deduplication ID.
-sqs.message.validation.empty.group_id=Please enter group ID.
-sqs.message.validation.empty.message.body=Please enter message body.
+sqs.message.validation.empty.deduplication_id=Enter a deduplication ID.
+sqs.message.validation.empty.group_id=Enter a group ID.
+sqs.message.validation.empty.message.body=Enter a message body
 sqs.message.validation.long.id=ID exceeds the maximum length of 128 characters.
 sqs.message_table_initial_text=Press "Poll for Messages" to load messages
 sqs.messages.available.text={0, choice, 0#No messages|1#1 message|2#{0,number} messages} available
