Move 'sent message' to the same line as buttons (#2053)
- Move 'sent message' to the same line as buttons rather than mutating the vertical space of the box after sending.

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -770,8 +770,8 @@ sqs.required.empty.text=(Required)
 sqs.send.message=Send a Message
 sqs.send.message.body.empty.text=Enter message body
 sqs.send.message.clear.button=Clear
-sqs.send.message.deduplication_id=Message Deduplication ID:
-sqs.send.message.group_id=Message Group ID:
+sqs.send.message.deduplication_id=Deduplication ID:
+sqs.send.message.group_id=Group ID:
 sqs.send.message.send.button=Send
 sqs.send.message.success=Sent message ID: {0}
 sqs.service_name=Amazon SQS
