SQS Copy action and small cleanup (#2052)
- Add copy action
- Truncate in the renderer instead of in the column model, so we can copy the whole message if it is too long
- Small code cleanup - rename toggleableWrap to wrapOnToggle, replace a runInEdt

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -712,7 +712,7 @@ settings.states.validating.short=Validating connection
 settings.title=AWS Connection Settings
 sqs.configure.lambda=Configure Lambda Trigger
 sqs.configure.lambda.configure.tooltip=It may take a few seconds to configure.
-sqs.configure.lambda.error=Failed to add trigger for function {0}. Please try again.
+sqs.configure.lambda.error=Failed to add trigger for function {0}. Try again later.
 sqs.configure.lambda.function=Lambda Function:
 sqs.configure.lambda.in_progress=Configuring...
 sqs.configure.lambda.select=Select Lambda Function:
@@ -724,6 +724,7 @@ sqs.confirm.iam.create=Add Policy
 sqs.confirm.iam.failed=Failed to create and attach role policy.
 sqs.confirm.iam.in_progress=Creating...
 sqs.confirm.iam.warning.text=<html>The selected Lambda function does not have permission to access SQS.<p>The following IAM role policy will be added to the function's execution role:</p></html>
+sqs.copy.message=Copy {0, choice, 1#message|2#{0,number} messages}
 sqs.create.fifo.label=FIFO
 sqs.create.queue.create=Create
 sqs.create.queue.failed=Failed to create queue {0}
