doc: How to run a single test #1294
Added openDocumentLocally and publishDocument commands (#1288)

The publishDocument command allow the aws extension to publish documents to the user's aws account.
The openDocumentLocally allows the aws extension to open up a local files as an aws documents file as either json or yaml.

Added OpenDocumentLocally and PublishDocument commands

Updated changelog

Added openDocumentLocally and publishDocument commands, removed support for command type documents

Added openDocumentLocally and publishDocument commands, removed support for command type documents

Added openDocumentLocally and publishDocument commands, removed support for command type documents

Removed all ssm doc changelogs

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "onLanguage:ssm-yaml",
         "onCommand:aws.ssmDocument.createLocalDocument",
         "onCommand:aws.ssmDocument.openLocalDocument",
+        "onCommand:aws.ssmDocument.publishDocument",
         "onLanguage:javascript",
         "onLanguage:python",
         "onLanguage:csharp",
@@ -1028,6 +1029,21 @@
             {
                 "command": "aws.cloudWatchLogs.viewLogStream",
                 "title": "%AWS.command.viewLogStream%",
+                "category": "AWS"
+            },
+            {
+                "command": "aws.ssmDocument.createLocalDocument",
+                "title": "%AWS.command.ssmDocument.createLocalDocument%",
+                "category": "AWS"
+            },
+            {
+                "command": "aws.ssmDocument.openLocalDocument",
+                "title": "%AWS.command.ssmDocument.openLocalDocument%",
+                "category": "AWS"
+            },
+            {
+                "command": "aws.ssmDocument.publishDocument",
+                "title": "%AWS.command.ssmDocument.publishDocument%",
                 "category": "AWS"
             },
             {
