--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -31,7 +31,7 @@ aws_connection.region.label=Region:
 aws_connection.tab.label=AWS Connection
 cloud_debug.deinstrument_resource.confirm=Are you sure you want to disable Cloud Debugging for "{0}"?
 cloud_debug.ecs.remote_shell.start=Start remote shell
-cloud_debug.ecs.run_config.cluster.label = Cluster:
+cloud_debug.ecs.run_config.cluster.label=Cluster:
 cloud_debug.ecs.run_config.cluster.tooltip=The ECS Cluster that contains a Service to Debug
 cloud_debug.ecs.run_config.container.add=Add Container
 cloud_debug.ecs.run_config.container.artifacts.add=Add artifacts mapping
@@ -63,10 +63,10 @@ cloud_debug.ecs.run_config.credentials.not_configured=AWS credentials are not co
 cloud_debug.ecs.run_config.description=Debugs a remote AWS ECS Service
 cloud_debug.ecs.run_config.import_from_dockerfile=Import from Dockerfile...
 cloud_debug.ecs.run_config.name=AWS ECS Service Cloud Debug (Beta)
-cloud_debug.ecs.run_config.service.enable.iamRole = Select a Role. Click the help button for more information about the role and how it is used.
-cloud_debug.ecs.run_config.service.enable.iamRole.tooltip = This role is used to configure the resource so that you can connect the debugger to it
-cloud_debug.ecs.run_config.service.iamRole = IAM Role:
-cloud_debug.ecs.run_config.service.label = Service:
+cloud_debug.ecs.run_config.service.enable.iamRole=Select a Role. Click the help button for more information about the role and how it is used.
+cloud_debug.ecs.run_config.service.enable.iamRole.tooltip=This role is used to configure the resource so that you can connect the debugger to it
+cloud_debug.ecs.run_config.service.iamRole=IAM Role:
+cloud_debug.ecs.run_config.service.label=Service:
 cloud_debug.ecs.run_config.service.tooltip=The Service to Debug
 cloud_debug.ecs.run_config.unsupported_dockerfile=Unable to determine container details from file {0}
 cloud_debug.ecs.run_config.unsupported_dockerfile.title=Unsupported file
@@ -710,7 +710,7 @@ settings.states.invalid.short=Unable to connect
 settings.states.validating=Validating connection to AWS...
 settings.states.validating.short=Validating connection
 settings.title=AWS Connection Settings
-sqs.configure.lambda=Configure Lambda Trigger
+sqs.configure.lambda=Configure Lambda Trigger...
 sqs.configure.lambda.configure.tooltip=It may take a few seconds to configure.
 sqs.configure.lambda.error=Failed to add trigger for function {0}. Try again later.
 sqs.configure.lambda.function=Lambda Function:
@@ -742,6 +742,23 @@ sqs.delete.message.failed=Failed to delete {0, choice, 1#message|2#{0,number} me
 sqs.delete.message.partial_successs=Failed to delete some messages! {0, choice, 1#message|2#{0,number} messages} were deleted.
 sqs.delete.message.succeeded=Successfully deleted {0, choice, 1#1 message|2#{0,number} messages}.
 sqs.delete.queue.action=Delete Queue
+sqs.edit.attributes=Edit Queue Attributes
+sqs.edit.attributes.action=Edit Queue Attributes...
+sqs.edit.attributes.delivery_delay=Delivery Delay (seconds):
+sqs.edit.attributes.delivery_delay.tooltip=The amount of time to delay the first delivery of each message.
+sqs.edit.attributes.failed=Failed to get queue attributes for queue {0}
+sqs.edit.attributes.message_size=Maximum Message Size (bytes):
+sqs.edit.attributes.message_size.tooltip=How many bytes a message can contain before it is rejected. Must be between {0} and {1} bytes.
+sqs.edit.attributes.queue.attributes=Queue Attributes
+sqs.edit.attributes.retention_period=Message Retention Period (seconds):
+sqs.edit.attributes.retention_period.tooltip=The amount of time that a message is retained in the queue. Must be between {0} and {1} seconds.
+sqs.edit.attributes.retrieving_from_service=Retrieving queue attributes from SQS
+sqs.edit.attributes.save=Save
+sqs.edit.attributes.updated=Updated queue attributes for {0}.
+sqs.edit.attributes.visibility_timeout=Visibility Timeout (seconds):
+sqs.edit.attributes.visibility_timeout.tooltip=The length of time that a received message will not be visible to other message consumers.
+sqs.edit.attributes.wait_time=Receive Message Wait Time (seconds):
+sqs.edit.attributes.wait_time.tooltip=The amount of time that polling will wait for messages to become available.
 sqs.failed_to_load_total=Failed to load number of messages available
 sqs.failed_to_poll_messages=Failed to poll messages
 sqs.failed_to_send_message=Failed to send message
@@ -777,7 +794,7 @@ sqs.send.message.send.button=Send
 sqs.send.message.success=Sent message ID: {0}
 sqs.service_name=Amazon SQS
 sqs.standard.queue.tooltip=Supports at-least-once delivery and message ordering is not preserved.
-sqs.subscribe.sns=Subscribe to SNS topic
+sqs.subscribe.sns=Subscribe to SNS topic...
 sqs.subscribe.sns.failed=Failed to subscribe {0} to {1}
 sqs.subscribe.sns.in_progress=Subscribing...
 sqs.subscribe.sns.select=Select SNS topic
