SQS UI Cleanup 3 (#2057)
- Remove delete message. Delete is confusing since it does not always work. It also allows us to:
- Set poll visibility timeout to 0. This means that the poll is actually a peek, which is nicer as a user.
- Add a confirmation to Purge Queue along with an approximate number of messages
- Make sure actions that open dialogs have ... after them
- Add the purge queue action into the table
- Update "Poll Queue" to "View Messages" along with the help text

--- a/jetbrains-core/resources/META-INF/plugin.xml
+++ b/jetbrains-core/resources/META-INF/plugin.xml
@@ -346,7 +346,7 @@
         <group id="aws.toolkit.explorer.sqs.queue" popup="true" compact="false">
             <action id="sqs.poll.message" class="software.aws.toolkits.jetbrains.services.sqs.actions.PollMessageAction"/>
             <action id="sqs.send.message" class="software.aws.toolkits.jetbrains.services.sqs.actions.SendMessageAction"/>
-            <action id="sqs.purge" class="software.aws.toolkits.jetbrains.services.sqs.actions.PurgeQueueAction"/>
+            <action id="sqs.purge" class="software.aws.toolkits.jetbrains.services.sqs.actions.PurgeQueueNodeAction"/>
             <separator/>
             <action id="sqs.configure.lambda" class="software.aws.toolkits.jetbrains.services.sqs.actions.ConfigureLambdaAction"/>
             <action id="sqs.subscribe.sns" class="software.aws.toolkits.jetbrains.services.sqs.actions.SubscribeSnsAction"/>
