--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -741,7 +741,7 @@ sqs.delete.message.action=Delete {0, choice, 1#message|2#{0,number} messages}
 sqs.delete.message.failed=Failed to delete {0, choice, 1#message|2#{0,number} messages}.
 sqs.delete.message.partial_successs=Failed to delete some messages! {0, choice, 1#message|2#{0,number} messages} were deleted.
 sqs.delete.message.succeeded=Successfully deleted {0, choice, 1#1 message|2#{0,number} messages}.
-sqs.delete.queue.action=Delete Queue
+sqs.delete.queue.action=Delete Queue...
 sqs.edit.attributes=Edit Queue Attributes
 sqs.edit.attributes.action=Edit Queue Attributes...
 sqs.edit.attributes.delivery_delay=Delivery Delay (seconds):
@@ -760,25 +760,28 @@ sqs.edit.attributes.visibility_timeout.tooltip=The length of time that a receive
 sqs.edit.attributes.wait_time=Receive Message Wait Time (seconds):
 sqs.edit.attributes.wait_time.tooltip=The amount of time that polling will wait for messages to become available.
 sqs.failed_to_load_total=Failed to load number of messages available
-sqs.failed_to_poll_messages=Failed to poll messages
+sqs.failed_to_poll_messages=Failed to view messages
 sqs.failed_to_send_message=Failed to send message
 sqs.fifo.queue.tooltip=Supports first-in-first-out delivery and message ordering is preserved.
 sqs.message.deduplication_id.tooltip=<html><p>Used for deduplication of sent messages. </p><p>If a message with a particular message deduplication ID is sent successfully, any messages sent with the same message deduplication ID are accepted successfully but aren't delivered during the 5-minute deduplication interval.</p></html>
 sqs.message.group_id.tooltip=<html><p>Specifies that a message belongs to a specific message group. </p><p>Messages that belong to the same message group are always processed in a strict order relative to the message group.</p></html>
 sqs.message.message_body=Message Body
 sqs.message.message_id=Message ID
-sqs.message.no_messages=No messages polled
+sqs.message.no_messages=No messages retrieved
 sqs.message.sender_id=Sender ID
 sqs.message.timestamp=Sent Timestamp
 sqs.message.validation.empty.deduplication_id=Enter a deduplication ID.
 sqs.message.validation.empty.group_id=Enter a group ID.
 sqs.message.validation.empty.message.body=Enter a message body
 sqs.message.validation.long.id=ID exceeds the maximum length of 128 characters.
-sqs.message_table_initial_text=Press "Poll for Messages" to load messages
+sqs.message_table_initial_text=Press "{0}" to load messages
 sqs.messages.available.text={0, choice, 0#No messages|1#1 message|2#{0,number} messages} available
-sqs.poll.message=Poll for Messages
-sqs.poll.warning.text=<html><p>Once polled, the sample of messages remain in the queue and are not returned to subsequent receive requests for the duration of the visibility timeout.</p></html>
-sqs.purge_queue=Purge Queue
+sqs.poll.message=View Messages
+sqs.poll.warning.text=<html><p>Messages are returned to the queue immediately upon viewing.</p></html>
+sqs.purge_queue=Purge Queue...
+sqs.purge_queue.action=Purge Queue
+sqs.purge_queue.confirm=Are you sure you want to purge queue {0} (approximately {1, choice, 1#1 message|2#{1,number} messages})?
+sqs.purge_queue.confirm.title=Purge Queue?
 sqs.purge_queue.failed=Failed to purge queue {0}
 sqs.purge_queue.failed.60_seconds=Purge queue request already in progress for queue {0}
 sqs.purge_queue.succeeded=Started purging queue {0}
