--- a/package.json
+++ b/package.json
@@ -478,11 +478,11 @@
                 },
                 {
                     "command": "aws.copyLogStreamName",
-                    "when": "resourceScheme == awsCloudWatchLogs"
+                    "when": "resourceScheme == awsCloudWatchLogs && !aws-toolkit-vscode:IsCloud9"
                 },
                 {
                     "command": "aws.saveCurrentLogStreamContent",
-                    "when": "resourceScheme == awsCloudWatchLogs"
+                    "when": "resourceScheme == awsCloudWatchLogs && !aws-toolkit-vscode:IsCloud9"
                 },
                 {
                     "command": "aws.cloudWatchLogs.viewLogStream",
@@ -519,24 +519,32 @@
                 {
                     "command": "aws.s3.uploadFileToParent",
                     "when": "false"
+                },
+                {
+                    "command": "aws.stepfunctions.createStateMachineFromTemplate",
+                    "when": "!aws-toolkit-vscode:IsCloud9"
+                },
+                {
+                    "command": "aws.stepfunctions.publishStateMachine",
+                    "when": "!aws-toolkit-vscode:IsCloud9"
                 }
             ],
             "editor/title": [
                 {
                     "command": "aws.previewStateMachine",
-                    "when": "editorLangId == asl",
+                    "when": "editorLangId == asl &&  && !aws-toolkit-vscode:IsCloud9",
                     "group": "navigation"
                 },
                 {
                     "command": "aws.saveCurrentLogStreamContent",
-                    "when": "resourceScheme == awsCloudWatchLogs",
+                    "when": "resourceScheme == awsCloudWatchLogs && !aws-toolkit-vscode:IsCloud9",
                     "group": "navigation"
                 }
             ],
             "editor/title/context": [
                 {
                     "command": "aws.copyLogStreamName",
-                    "when": "resourceScheme == awsCloudWatchLogs",
+                    "when": "resourceScheme == awsCloudWatchLogs && !aws-toolkit-vscode:IsCloud9",
                     "group": "1_cutcopypaste@1"
                 }
             ],
@@ -625,22 +633,22 @@
             "view/item/context": [
                 {
                     "command": "aws.s3.downloadFileAs",
-                    "when": "view == aws.explorer && viewItem == awsS3FileNode",
+                    "when": "view == aws.explorer && viewItem == awsS3FileNode && !aws-toolkit-vscode:IsCloud9",
                     "group": "inline@1"
                 },
                 {
                     "command": "aws.s3.createBucket",
-                    "when": "view == aws.explorer && viewItem == awsS3Node",
+                    "when": "view == aws.explorer && viewItem == awsS3Node && !aws-toolkit-vscode:IsCloud9",
                     "group": "inline@1"
                 },
                 {
                     "command": "aws.s3.createFolder",
-                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/ && !aws-toolkit-vscode:IsCloud9",
                     "group": "inline@1"
                 },
                 {
                     "command": "aws.s3.uploadFile",
-                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/ && !aws-toolkit-vscode:IsCloud9",
                     "group": "inline@2"
                 },
                 {
@@ -670,52 +678,52 @@
                 },
                 {
                     "command": "aws.searchSchema",
-                    "when": "view == aws.explorer && viewItem == awsSchemasNode",
+                    "when": "view == aws.explorer && viewItem == awsSchemasNode && !aws-toolkit-vscode:IsCloud9",
                     "group": "0@1"
                 },
                 {
                     "command": "aws.searchSchemaPerRegistry",
-                    "when": "view == aws.explorer && viewItem == awsRegistryItemNode",
+                    "when": "view == aws.explorer && viewItem == awsRegistryItemNode && !aws-toolkit-vscode:IsCloud9",
                     "group": "0@1"
                 },
                 {
                     "command": "aws.viewSchemaItem",
-                    "when": "view == aws.explorer && viewItem == awsSchemaItemNode",
+                    "when": "view == aws.explorer && viewItem == awsSchemaItemNode && !aws-toolkit-vscode:IsCloud9",
                     "group": "0@1"
                 },
                 {
                     "command": "aws.downloadStateMachineDefinition",
-                    "when": "view == aws.explorer && viewItem == awsStateMachineNode",
+                    "when": "view == aws.explorer && viewItem == awsStateMachineNode && !aws-toolkit-vscode:IsCloud9",
                     "group": "0@1"
                 },
                 {
                     "command": "aws.executeStateMachine",
-                    "when": "view == aws.explorer && viewItem == awsStateMachineNode",
+                    "when": "view == aws.explorer && viewItem == awsStateMachineNode && !aws-toolkit-vscode:IsCloud9",
                     "group": "0@2"
                 },
                 {
                     "command": "aws.s3.createBucket",
-                    "when": "view == aws.explorer && viewItem == awsS3Node",
+                    "when": "view == aws.explorer && viewItem == awsS3Node && !aws-toolkit-vscode:IsCloud9",
                     "group": "0@1"
                 },
                 {
                     "command": "aws.s3.downloadFileAs",
-                    "when": "view == aws.explorer && viewItem == awsS3FileNode",
+                    "when": "view == aws.explorer && viewItem == awsS3FileNode && !aws-toolkit-vscode:IsCloud9",
                     "group": "0@1"
                 },
                 {
                     "command": "aws.s3.uploadFile",
-                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/ && !aws-toolkit-vscode:IsCloud9",
                     "group": "0@1"
                 },
                 {
                     "command": "aws.s3.uploadFileToParent",
-                    "when": "view == aws.explorer && viewItem == awsS3FileNode",
+                    "when": "view == aws.explorer && viewItem == awsS3FileNode && !aws-toolkit-vscode:IsCloud9",
                     "group": "1@1"
                 },
                 {
                     "command": "aws.s3.createFolder",
-                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/ && !aws-toolkit-vscode:IsCloud9",
                     "group": "1@1"
                 },
                 {
@@ -730,22 +738,22 @@
                 },
                 {
                     "command": "aws.s3.copyPath",
-                    "when": "view == aws.explorer && viewItem =~ /^(awsS3FolderNode|awsS3FileNode)$/",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsS3FolderNode|awsS3FileNode)$/ && !aws-toolkit-vscode:IsCloud9",
                     "group": "2@3"
                 },
                 {
                     "command": "aws.s3.deleteBucket",
-                    "when": "view == aws.explorer && viewItem == awsS3BucketNode",
+                    "when": "view == aws.explorer && viewItem == awsS3BucketNode && !aws-toolkit-vscode:IsCloud9",
                     "group": "3@1"
                 },
                 {
                     "command": "aws.s3.deleteFile",
-                    "when": "view == aws.explorer && viewItem == awsS3FileNode",
+                    "when": "view == aws.explorer && viewItem == awsS3FileNode && !aws-toolkit-vscode:IsCloud9",
                     "group": "3@1"
                 },
                 {
                     "command": "aws.downloadSchemaItemCode",
-                    "when": "view == aws.explorer && viewItem == awsSchemaItemNode",
+                    "when": "view == aws.explorer && viewItem == awsSchemaItemNode && !aws-toolkit-vscode:IsCloud9",
                     "group": "1@1"
                 },
                 {
@@ -761,7 +769,7 @@
                 {
                     "command": "aws.cloudWatchLogs.viewLogStream",
                     "group": "0@1",
-                    "when": "view == aws.explorer && viewItem == awsCloudWatchLogNode"
+                    "when": "view == aws.explorer && viewItem == awsCloudWatchLogNode && !aws-toolkit-vscode:IsCloud9"
                 }
             ]
         },
@@ -1056,7 +1064,7 @@
                 "command": "aws.previewStateMachine",
                 "key": "ctrl+shift+v",
                 "mac": "cmd+shift+v",
-                "when": "editorTextFocus && editorLangId == asl"
+                "when": "editorTextFocus && editorLangId == asl && !aws-toolkit-vscode:IsCloud9"
             }
         ],
         "grammars": [
