Add UI tests for SQS (#2051)

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -726,6 +726,7 @@ sqs.confirm.iam.in_progress=Creating...
 sqs.confirm.iam.warning.text=<html>The selected Lambda function does not have permission to access SQS.<p>The following IAM role policy will be added to the function's execution role:</p></html>
 sqs.copy.message=Copy {0, choice, 1#message|2#{0,number} messages}
 sqs.create.fifo.label=FIFO
+sqs.create.queue=Create Queue...
 sqs.create.queue.create=Create
 sqs.create.queue.failed=Failed to create queue {0}
 sqs.create.queue.in_progress=Creating...
@@ -778,8 +779,8 @@ sqs.message_table_initial_text=Press "{0}" to load messages
 sqs.messages.available.text={0, choice, 0#No messages|1#1 message|2#{0,number} messages} available
 sqs.poll.message=View Messages
 sqs.poll.warning.text=<html><p>Messages are returned to the queue immediately upon viewing.</p></html>
-sqs.purge_queue=Purge Queue...
-sqs.purge_queue.action=Purge Queue
+sqs.purge_queue=Purge Queue
+sqs.purge_queue.action=Purge Queue...
 sqs.purge_queue.confirm=Are you sure you want to purge queue {0} (approximately {1, choice, 1#1 message|2#{1,number} messages})?
 sqs.purge_queue.confirm.title=Purge Queue?
 sqs.purge_queue.failed=Failed to purge queue {0}
