--- a/package.json
+++ b/package.json
@@ -1143,6 +1143,7 @@
         "ts-mockito": "^2.5.0",
         "ts-node": "^8.5.2",
         "tslint": "^6.1.3",
+        "umd-compat-loader": "^2.1.2",
         "vsce": "^1.69.0",
         "vscode-nls-dev": "^3.3.1",
         "vscode-test": "^1.4.0",
