Cleanup and add log group selector to insights query editor (#2055)
Additionally, pass connection settings around in case user changes regions or credential profiles

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -208,12 +208,14 @@ cloudwatch.logs.filtered_log_stream_title=Filtered Stream: {0} from {1} to {2}
 cloudwatch.logs.last_event_time=Last Event Time
 cloudwatch.logs.log_group_does_not_exist=Log group {0} does not exist
 cloudwatch.logs.log_group_title=Group: {0}
+cloudwatch.logs.log_groups=Log Groups
 cloudwatch.logs.log_stream_does_not_exist=Log stream {0} does not exist
 cloudwatch.logs.log_stream_title=Stream: {0}
 cloudwatch.logs.log_streams=Log Streams
 cloudwatch.logs.no_end_date=End Date must be specified
 cloudwatch.logs.no_events=No Events in Log Stream
 cloudwatch.logs.no_events_query=No Events matching the query found in Log Stream {0}
+cloudwatch.logs.no_log_group=At least one log group must be selected
 cloudwatch.logs.no_log_streams=No Log Stream found
 cloudwatch.logs.no_query_entered=Query must be specified
 cloudwatch.logs.no_relative_time_number=Number must be specified
@@ -242,7 +244,6 @@ cloudwatch.logs.saved_query_status=Saved Query Status
 cloudwatch.logs.saving_to_disk=Saving Stream {0} to disk
 cloudwatch.logs.saving_to_disk_failed=Saving Stream {0} failed
 cloudwatch.logs.saving_to_disk_succeeded=Finished saving Log Stream {0} to {1}
-cloudwatch.logs.selected_log_groups=Log Groups Selected
 cloudwatch.logs.show_logs_around=Show Logs Around
 cloudwatch.logs.stream_save_to_file=Save {0} to a file
 cloudwatch.logs.stream_too_big=Stream is Too Large
