Add double click action on insights results to show detailed log record (#2068)

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -209,6 +209,10 @@ cloudwatch.logs.last_event_time=Last Event Time
 cloudwatch.logs.log_group_does_not_exist=Log group {0} does not exist
 cloudwatch.logs.log_group_title=Group: {0}
 cloudwatch.logs.log_groups=Log Groups
+cloudwatch.logs.log_record=Log Record: {0}
+cloudwatch.logs.log_record_field=Log Event Field
+cloudwatch.logs.log_record_open_log_stream=View Log Stream
+cloudwatch.logs.log_record_value=Log Event Value
 cloudwatch.logs.log_stream_does_not_exist=Log stream {0} does not exist
 cloudwatch.logs.log_stream_title=Stream: {0}
 cloudwatch.logs.log_streams=Log Streams
